
2024-09-20  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* screenio.c (cob_screen_get_all) fixed Bug #990

2024-08-28  David Declerck <david.declerck@ocamlpro.com>

	* intrinsics.c (cob_intr_random), move.c (cob_move_display_to_packed):
	  make casts with loss of data explicit using masking to silence
	  the MSVC runtime error checker

2024-08-22  David Declerck <david.declerck@ocamlpro.com>

	* common.c (DllMain) [_MSC_VER]: added calls to _CrtSetReportMode
	  to disable Windows error popups and redirect them to stderr

2024-08-17  Ammar Almorsi <ammaralmorsi@gmail.com>

	FR #474: add runtime configuration to hide cursor for extended screenio
	* common.c, coblocal.h (cob_settings): added boolean COB_HIDE_CURSOR
	* screenio.c (cob_settings_screenio): implemented runtime config to hide
	  the cursor

2024-07-29  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* move.c (optimized_move_display_to_edited): fixed small bug
	  in logic for floating sign symbol to the right of decimal_point
	  or assumed decimal_point

2024-07-13  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* move.c (indirect_move) fixed sanitizer warnings by moving
	  one line of code

2024-07-11  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* screenio.c (cob_sys_scr_dump, cob_sys_scr_restore) fixed C90 warnings

2024-07-11  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* screenio.c (cob_sys_scr_dump, cob_sys_scr_restore) fixed C90 warnings
	  Also fixed issue when build without curses
	* move.c (indirect_move) fixed C90 warnings
	* profiling.c (profile_setup_clock) fixed C90 warnings

2024-07-10  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	fix errors in cob_optimized_move_display_to_edited introduced
	with changes at revision R5285. The errors showed up in the 
	NIST tests in group NC.

	* move.c (optimized_move_display_to_edited): fixed bugs
	  (indirect_move): fixed bug when calculating scale of 
	  the intermediate cob field

2024-07-09  Boris Eng <boris.eng@ocamlpro.com>